doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-7-openjdk-i386/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/usr/share/greenfoot/extensions/greenfoot.jar:/usr/share/greenfoot/bluejcore.jar:/usr/share/greenfoot/bluejeditor.jar:/usr/share/greenfoot/bluejext.jar:/usr/share/greenfoot/AppleJavaExtensions.jar:/usr/share/greenfoot/junit-4.8.2.jar:/usr/share/greenfoot/bluej.jar:/usr/share/greenfoot/commons-httpclient-3.1.jar:/usr/share/greenfoot/commons-logging-api-1.1.2.jar:/usr/share/greenfoot/commons-codec-1.3.jar:/usr/share/greenfoot/jl1.0.1.jar:/usr/share/greenfoot/opencsv-2.3.jar:/home/markus/Dropbox/UNI/dIntProg/greenfoot/AntsandSpiders
-d
/home/markus/Dropbox/UNI/dIntProg/greenfoot/AntsandSpiders/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/greenfoot/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/markus/Dropbox/UNI/dIntProg/greenfoot/AntsandSpiders/MyAnt.java
<---- end of javadoc command ---->
Loading source file /home/markus/Dropbox/UNI/dIntProg/greenfoot/AntsandSpiders/MyAnt.java...
/home/markus/Dropbox/UNI/dIntProg/greenfoot/AntsandSpiders/MyAnt.java:49: error: ';' expected
        wallV = wallV.add// avoid bottom wall, not yet implemented
                         ^
1 error
